// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query ajlb get tests from date should return expected ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startFlightMins": 367000,
    "startFlightTime": "6116:40",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 81,
      "newFlightsCount": 0,
      "newFlightsPage": 81,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "6118:40",
      "validatedBeforeUTC": "2025-03-02T11:30:00.000Z",
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "6118:40",
    },
  },
]
`;

exports[`Db query ajlb get tests should return IHQ ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-04",
    "noOfPages": 80,
    "rowsPerPage": 11,
    "seqNo": 1,
    "startDate": "2024-04-03",
    "startFlightMins": 2445,
    "startFlightTime": "40:45",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 1,
      "newFlightsCount": 0,
      "newFlightsPage": 1,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "40:45",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "40:45",
    },
  },
]
`;

exports[`Db query ajlb get tests should return STL ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 120,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2024-04-02",
    "startFlightMins": 286700,
    "startFlightTime": "4778:20",
    "startLandings": 0,
    "startPage": 10,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 10,
      "newFlightsCount": 3,
      "newFlightsPage": 10,
      "newFlightsTime": "5:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "4783:20",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "4778:20",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2024-04-02",
    "noOfPages": 100,
    "rowsPerPage": 12,
    "seqNo": 1,
    "startDate": "2023-04-01",
    "startFlightMins": 610,
    "startFlightTime": "10:10",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 33,
      "newFlightsCount": 2,
      "newFlightsPage": 33,
      "newFlightsTime": "6:49",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "361:50",
      "validatedBeforeUTC": "2010-06-15T03:33:00.000Z",
      "validatedFlightsCount": 191,
      "validatedFlightsTime": "343:48",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "355:01",
    },
  },
]
`;

exports[`Db query ajlb get tests should return all ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startFlightMins": 367000,
    "startFlightTime": "6116:40",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 81,
      "newFlightsCount": 0,
      "newFlightsPage": 81,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "6118:40",
      "validatedBeforeUTC": "2025-03-02T11:30:00.000Z",
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "6118:40",
    },
  },
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2025-04-04",
    "noOfPages": 80,
    "rowsPerPage": 11,
    "seqNo": 1,
    "startDate": "2024-04-03",
    "startFlightMins": 2445,
    "startFlightTime": "40:45",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 1,
      "newFlightsCount": 0,
      "newFlightsPage": 1,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "40:45",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "40:45",
    },
  },
  {
    "aircraftRegistration": "OH-P28",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 10,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startFlightMins": 313700,
    "startFlightTime": "5228:20",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 3,
      "newFlightsCount": 19,
      "newFlightsPage": 1,
      "newFlightsTime": "35:25",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "5265:35",
      "validatedBeforeUTC": "2025-03-04T13:35:00.000Z",
      "validatedFlightsCount": 1,
      "validatedFlightsTime": "1:50",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "5230:10",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 120,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2024-04-02",
    "startFlightMins": 286700,
    "startFlightTime": "4778:20",
    "startLandings": 0,
    "startPage": 10,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 10,
      "newFlightsCount": 3,
      "newFlightsPage": 10,
      "newFlightsTime": "5:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "4783:20",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "4778:20",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": "2024-04-02",
    "noOfPages": 100,
    "rowsPerPage": 12,
    "seqNo": 1,
    "startDate": "2023-04-01",
    "startFlightMins": 610,
    "startFlightTime": "10:10",
    "startLandings": 0,
    "startPage": 1,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 33,
      "newFlightsCount": 2,
      "newFlightsPage": 33,
      "newFlightsTime": "6:49",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "361:50",
      "validatedBeforeUTC": "2010-06-15T03:33:00.000Z",
      "validatedFlightsCount": 191,
      "validatedFlightsTime": "343:48",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "355:01",
    },
  },
]
`;

exports[`Db query ajlb get tests should return all current ajlbs 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startFlightMins": 367000,
    "startFlightTime": "6116:40",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 81,
      "newFlightsCount": 0,
      "newFlightsPage": 81,
      "newFlightsTime": "00:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "6118:40",
      "validatedBeforeUTC": "2025-03-02T11:30:00.000Z",
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "6118:40",
    },
  },
  {
    "aircraftRegistration": "OH-P28",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 90,
    "rowsPerPage": 10,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startFlightMins": 313700,
    "startFlightTime": "5228:20",
    "startLandings": 0,
    "startPage": 81,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 3,
      "newFlightsCount": 19,
      "newFlightsPage": 1,
      "newFlightsTime": "35:25",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "5265:35",
      "validatedBeforeUTC": "2025-03-04T13:35:00.000Z",
      "validatedFlightsCount": 1,
      "validatedFlightsTime": "1:50",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "5230:10",
    },
  },
  {
    "aircraftRegistration": "OH-STL",
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "endDate": null,
    "noOfPages": 120,
    "rowsPerPage": 11,
    "seqNo": 2,
    "startDate": "2024-04-02",
    "startFlightMins": 286700,
    "startFlightTime": "4778:20",
    "startLandings": 0,
    "startPage": 10,
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "view": {
      "lastPage": 10,
      "newFlightsCount": 3,
      "newFlightsPage": 10,
      "newFlightsTime": "5:00",
      "totalLandings": 0,
      "unverifiedTotalFlightTime": "4783:20",
      "validatedBeforeUTC": null,
      "validatedFlightsCount": 0,
      "validatedFlightsTime": "00:00",
      "validatedTotalLandings": 0,
      "verifiedTotalFlightTime": "4778:20",
    },
  },
]
`;
